# pulse-desktop-environment

./: CMakeLists.txt  Compositor.cpp  Compositor.cpp.orig  Compositor.h  CompositorView.qml  Core.cpp  Core.h  Logger.cpp  Logger.h  README.md  SimplePanel.qml  Window.cpp  Window.h  WindowItem.qml  WindowManager.cpp  WindowManager.h  WindowRenderer.cpp  WindowRenderer.h  main.cpp  main.qml
